# aiorpcgrid

./: .gitignore  Pipfile  README.md  pyfix.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-package.yml
aiorpcgrid/: __init__.py  client.py  rpcgrid.py  server.py  task.py
aiorpcgrid/protocol/: jsonrpc.py
aiorpcgrid/providers/: __init__.py  local.py  rabbit.py  socket.py
tests/: test_aiorpcgrid.py
