[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "aiorpcgrid"
version = "0.1.0"
description = ""
authors = ["Iurii Bell <iurii@bellavin@gmail.com>"]
#home-page = "https://github.com/urands/aiorpcgrid"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
[tool.poetry.dependencies]
python = "^3.6"
aio-pika = {version = "^6.7.1", extras = ["rabbit","all"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "2.10.0"
pytest-asyncio = "^0.14.0"
mypy = "^0.790"
flake8 = "^3.8.3"
flake8-polyfill="^1.0.2"
radon = "^4.3.2"
black = "^20.8b1"
isort = "^5.6.4"
